--- a/index.html
+++ b/index.html
@@ -5,7 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidebar Design</title>
 </head>
-<body>
+<body class="body">
+
+    <div class="slidebar-container">
+        <div class="sidebar">
+            <h2>DETAILS</h2>
+            <ul class="nav-list">
+                <li><a href="#home">Home</a></li><br>
+                <li><a href="#about-us">About Us</a></li><br>
+                <li><a href="#our-services">Our Services</a></li><br>
+                <li><a href="#contact-us">Contact Us</a></li><br>
+            </ul>
+        </div>
+
     
 </body>
 </html>
