--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidebar Design</title>
 </head>
+
 <body class="body">
 
     <div class="slidebar-container">
@@ -17,7 +19,16 @@
                 <li><a href="#contact-us">Contact Us</a></li><br>
             </ul>
         </div>
+        <div class="content">
+            <div id="home" class="section">
+                <p>
+                    <h3>Domino's Cafe</h3><br><br>
+                    Domino's Pizza, Inc., commonly referred to as Domino's, is an American multinational pizza restaurant chain founded in 1960. and led by CEO Russell Weiner. The corporation is Delaware-domiciled and headquartered at the Domino's Farms Office Park in Ann Arbor Township, near Ann Arbor, Michigan. As of 2018, Domino's had approximately 15,000 stores, with 5,649 in the United States, 1,500 in India, and 1,249 in the United Kingdom. Domino's has stores in over 83 countries and 5,701 cities worldwide.
 
-    
+                    <h3>Thank you for visiting. Visit Again</h3>
+                </p>
+            </div>
+
 </body>
+
 </html>
